# ECE417-F24-Mobile-Robots

./: .gitignore  .gitmodules  README.md  apt.txt  environment.yml
code/camera-model/: .gitignore  CMakeLists.txt  NP1_0.h5  calibration.h5  main.cpp
code/catkin_ws/: README.md
docs/: .gitignore  Gemfile  _config.yml  drils  html2pdf492013-0.html  schedule.md  syllabus.md
docs/_drafts/: 2023-09-06-video.md  2023-09-18-video.md  2023-09-20-video.md  2023-09-25-video.md  2023-09-29-video.md  2023-10-23-video.md  2023-10-27-video.md  2023-11-03-video.md  2023-11-15-video.md  2023-11-20-video.md  2023-11-29-video.md
docs/_layouts/: default.html  home.html
docs/_posts/: 0000-00-02-prereq-hw.md  0000-00-04-py-intro.md  2021-10-28-syllabus-posted.md  2023-03-22-syllabus-posted.md  2023-08-28-video.md  2023-08-30-video.md  2023-09-01-video.md  2023-09-06-video.md  2023-09-08-video.md  2023-09-11-video.md  2023-09-13-video.md  2023-09-15-video.md  2023-09-22-video.md  2023-09-27-video.md  2023-10-11-video.md  2023-10-16-video.md  2023-10-18-video.md  2023-10-20-video.md  2023-10-25-video.md  2023-10-30-video.md  2023-11-01-video.md  2023-11-03-video.md  2023-11-06-video.md  2023-11-17-video.md  2023-11-27-video.md  2023-12-01-video.md
docs/exam/: .gitignore
docs/labnotes/: 04-04-homography.md  04-11-detect-chessboard.md  VM and ROS Setup Guide.pdf.xoj
docs/notebooks/: Pipfile  setup.bash
docs/slides/: .gitignore  01-19-intro-to-robotics.html  01-20-coordinate-transformations.xoj  01-24-coordinate-transformations.xoj  01-28-ros-intro.html  01-31-tf-trees.html  2023-10-25-notes.xoj  2023-10-27-rob-arm-notes.xoj  2023-10-30-rob-arm-notes.xoj  2023-11-03-inverse-kinematics.xoj  2023-11-15-ece498-project.pdf.xoj  2023-11-20-lqr.xoj  2024-10-16-notes.xoj  2024-10-18-notes.xoj  2024-10-21-notes.xoj  2024-10-23-notes.xoj  2024-10-28-easons-practice-problems.xoj  2024-10-28-notes.xoj  2024-10-30-notes.xoj  2024-11-06-rob-arm-notes.xoj  2024-11-08-rob-arm-notes.xoj  2024-11-20-rob-arm-notes.xoj  2024-11-22-rob-arm-notes.xoj  2024-11-25-pid-lqr.xoj  2024-12-02-rob-arm-notes.xoj  2024-12-04-rob-arm-notes.xoj  2024-12-06-Note-09-23.xoj  2024-12-06-rob-arm-notes.xoj  2024-12-09-lqr.xoj  (+2 more)
docs/slides/03-09-svd-null-space/: CMakeLists.txt  fitline.cpp
docs/slides/03-25-DLT-algo/code/: CMakeLists.txt  README.md  apt.txt  homography.cpp
notebooks/: build.sh  eigen.ipynb  random_rotation.cpp  test.cpp
(+263 files in other folders)
